--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 	--card-foreground: hsl(0 0% 9.0196%);
 	--popover: hsl(0 0% 98.8235%);
 	--popover-foreground: hsl(0 0% 32.1569%);
-	--primary: hsl(151.3274 66.8639% 66.8627%);
+	--primary: hsl(0, 85%, 55%);
 	--primary-foreground: hsl(153.3333 13.0435% 13.5294%);
 	--secondary: hsl(0 0% 99.2157%);
 	--secondary-foreground: hsl(0 0% 9.0196%);
@@ -72,7 +72,7 @@ body {
 	--card-foreground: hsl(214.2857 31.8182% 91.3725%);
 	--popover: hsl(0, 0%, 7%);
 	--popover-foreground: hsl(0 0% 66.2745%);
-	--primary: hsl(154.898 100% 19.2157%);
+	--primary: hsl(0, 80%, 52%);
 	--primary-foreground: hsl(152.7273 19.2982% 88.8235%);
 	--secondary: hsl(0 0% 14.1176%);
 	--secondary-foreground: hsl(0 0% 98.0392%);
